# eliterobot

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
elirobots_pmr_sdk/: __init__.py  _baseec.py  _ec.py  _move.py  _servo.py
elite/: __init__.py  _baseec.py  _ec.py  _monitor.py  _move.py  _movett.py  _servo.py  types.py
pmr_elirobots_sdk/: _baseec.py  _ec.py  _servo.py
