[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elirobots_fgmd"
version = "0.0.1"
description = "a SDK library for Elite EC Series Robot"
readme = "README.md"
requires-python = ">3.5"
keywords = ["elite", "elibot", "eliterobot", "robot", "Robot", "robotSDK"]
authors = [
    {name = "Elite", email = "zhangjunjie@elibot.cn"},
    {name = "Felipe Gomes de Melo", email = "felipegmelo@usp.br"}
]
urls = {Homepage = "https://github.com/JunJie-zhang-o/eliterobot.git"}
dependencies = [
    "loguru==0.6.0"
]

[tool.setuptools]
packages = {find = {}}
# Optional: If you need to include specific packages or exclude others, you can use:
# packages = {find = {where = ".", include = ["elite*"], exclude = ["elite.EliteJson_3_0_2", "elite.ElitePoseCali", "elite.pose"]}}